--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -19,7 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
     "mongoose-patch-update": "^1.0.6",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
+    "paypal-rest-sdk": "^1.8.1",
     "slugify": "^1.6.5"
   }
 }
