--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,7 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event":  "^13.5.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "iconsax-react": "^0.0.8",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
