--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGO = mongodb+srv://lama:lama@cluster0.1qwmnmy.mongodb.net/EC?retryWrites=true&w=majority
 JWT = an
+BACKEND=http://localhost:8800/backend
+FRONTEND=http://localhost:3000
