--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,8 +22,11 @@
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-validate-size": "^1.2.7",
     "iconsax-react": "^0.0.8",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.4.2",
