--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-encode": "^2.1.10",
+    "filepond-plugin-file-validate-size": "^2.2.7",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-validate-size": "^1.2.7",
+    "react-filepond": "^7.1.2",
     "iconsax-react": "^0.0.8",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
