--- a/admin/package.json
+++ b/admin/package.json
@@ -19,13 +19,15 @@
     "filepond-plugin-image-preview": "^4.6.11",
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-validate-size": "^1.2.7",
-    "react-filepond": "^7.1.2",
     "iconsax-react": "^0.0.8",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "recharts": "^2.2.0",
     "sass": "^1.57.0",
     "styled-components": "^5.3.6",
