--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ MONGO = mongodb+srv://lama:lama@cluster0.1qwmnmy.mongodb.net/EC?retryWrites=true
 JWT = an
 BACKEND=http://localhost:8800/backend
 FRONTEND=http://localhost:3000
+
+USERNAME = 4TL
+PASSWORD = ghw3h8HJiUwBEioK
+MONGO = mongodb+srv://4TL:ghw3h8HJiUwBEioK@cluster0.vijfszk.mongodb.net/test
