--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "filepond-plugin-image-validate-size": "^1.2.7",
     "iconsax-react": "^0.0.8",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -34,7 +35,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
